Fix visible dropdown action grid

--- a/app/design/adminhtml/Magento/backend/Magento_Ui/web/css/source/module/_data-grid.less
+++ b/app/design/adminhtml/Magento/backend/Magento_Ui/web/css/source/module/_data-grid.less
@@ -264,10 +264,6 @@ body._in-resize {
             border-right-style: @data-grid-td__border-outer-style;
         }
 
-        //  Action select data grid styles (can be action-select-secondary in future)
-        .action-select-wrap {
-            position: static;
-        }
 
         .action-select {
             .link-pattern();
@@ -429,7 +425,6 @@ body._in-resize {
     .data-grid-actions-cell {
         padding-left: @data-grid-cell__padding-horizontal * 2;
         padding-right: @data-grid-cell__padding-horizontal * 2;
-        position: relative;
         text-align: center;
         width: 1%;
     }
