--- a/app/design/adminhtml/Magento/backend/web/css/source/actions/_actions-select.less
+++ b/app/design/adminhtml/Magento/backend/web/css/source/actions/_actions-select.less
@@ -22,7 +22,6 @@
     @_action-select-toggle__size: @action__height;
 
     display: inline-block;
-    position: relative;
 
     .action-select {
         .action-toggle-triangle(
