--- a/app/design/adminhtml/Magento/backend/web/css/source/forms/fields/_control-table.less
+++ b/app/design/adminhtml/Magento/backend/web/css/source/forms/fields/_control-table.less
@@ -26,6 +26,7 @@
 .admin__control-table-wrapper {
     max-width: 100%;
     overflow-x: auto;
+    overflow-y: hidden;
 }
 
 .admin__control-table {
